# ChangeLog for sys-process/systemd-cron
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*systemd-cron-1.5.1 (14 Dec 2014)

  12 Dec 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support USE=setgid

*systemd-cron-1.4.2 (29 Nov 2014)

  28 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix pypy3 dep

*systemd-cron-1.4.1 (16 Nov 2014)

  16 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix USE=-etc-crontab.
  python-2.7 no longer supported

*systemd-cron-1.4.0 (11 Nov 2014)

  11 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*systemd-cron-1.3.3-r1 (01 Nov 2014)

  01 Nov 2014; Martin Väth <martin@mvath.de>:
  Add USE=etc-crontab. Bump to alert users

*systemd-cron-1.3.3 (23 Oct 2014)

  23 Oct 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*systemd-cron-1.3.1 (22 Sep 2014)

  24 Sep 2014; Martin Väth <martin@mvath.de>:
  Do not install LICENSE

  22 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*systemd-cron-1.3.0 (10 Sep 2014)

  10 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*systemd-cron-1.2.1 (05 Jun 2014)

  06 Jul 2014; Martin Väth <martin@mvath.de>:
  New style github tarball

  05 Jun 2014; Martin Väth <martin@mvath.de>:
  New ebuild from scratch