@@ -1,1 +1,1 @@
-DIST systemd-cron-1.5.1.tar.gz 25085 SHA256 f3280353df4cb550f9eef9518b60d2c3f7b18bef4c93a797fdf2047c8defafb7 SHA512 5bae12d0104ef577fe2010efb05ade3d752c1aaf3d40ec62862343f529970ef92fb5e7a1494b3a6e6748c1b276ab43d256f5ecde03a031c987fbe8579dc8f5d9 WHIRLPOOL 6f778e2fe1f971f8dacad27c09c07a7db8d12f12b5ab3f127d49545233cb7b2ebc20dcffe30710a82e3bd4dceb7bc49ba10ac2772c076d858fffc9075c8fb992
+DIST systemd-cron-1.5.2.tar.gz 25516 SHA256 43d9c0c9b891f4a55be2cc049f9954e5fdbdbc44d3ecb9c1a3230b55267a6588 SHA512 93b2be9e0924c17484c728cd787bec58c013db9f0657479331a35cc5e2c5967e04b70c3e20d033ba3695d00a9b661fa32bde93633cabe7c0dffc83d672851262 WHIRLPOOL d380edcd701abc0837a4685fad6ab7360942054103e7f0f0877dda6ff26379c7f8a6511e9f75b7dbab7dabf68403b1d11a8b7cae62ac59ec45f974bc424c2fa0
