@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*systemd-cron-1.5.2 (22 Dec 2014)
+
+  12 Dec 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *systemd-cron-1.5.1 (14 Dec 2014)
 
   12 Dec 2014; Martin Väth <martin@mvath.de>:
